--- a/módulo_I/pratica.html
+++ b/módulo_I/pratica.html
@@ -1,29 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS - Exércicio</title>
+    <link rel="stylesheet" href="pratica.css">
 </head>
 <body>
 
-    <!-- Rio Branco é a capital do estado do Acre (AC). Área territorial: 8.835km² População: 350mil habitantes.
-   Curiosidade: de “Capital da Natureza”, em razão dos seus atributos naturais.
+    <h1>Estados e algumas capitais</h1>
 
-Maceió é a capital do estado de Alagoas. Área territorial: 509,6km² População: 1.012.387 de habitantes  Curiosidade:
-    Muito procurada pelos turistas nos meses de verão centro financeiro, social e cultural de Alagoas.
+    <section class="card">
+        <h2 class="card-titulo">Rio Branco</h2>
+        <img src="/imgs/rio_branco.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>Rio Branco</strong> é a capital do estado do Acre (AC) <br> 
+            <b>Área territorial:</b> 8.835km² <br> 
+            <b>População:</b> 350mil habitantes <br>
+            <b>Curiosidade:</b> de “Capital da Natureza”, em razão dos seus atributos naturais
+        </p>
+    </section>
 
-Macapá é a capital do estado do Amapá Área territorial: 6.407km² População: 493.634 habitantes  Curiosidade: a única que não faz ligação com outras capitais por meio de rodovias.
+    <section class="card">
+        <h2 class="card-titulo">Maceió</h2>
+        <img src="/imgs/maceio.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>Maceió</strong> é a capital do estado de Alagoas<br> 
+            <b>Área territorial:</b> 509,6km² <br> 
+            <b>População:</b> 1.012.387 habitantes <br> 
+            <b>Curiosidade:</b> Muito procurada pelos turistas nos meses de verão centro financeiro, social e cultural de Alagoas
+        </p>
+    </section>
 
-Manaus é a capital do estado do Amazonas Área territorial:11.401km² População: 2 milhões de habitantes. Curiosidade: situada no centro da floresta amazônica
+    <section class="card">
+        <h2 class="card-titulo">Macapá</h2>
+        <img src="/imgs/macapa.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>Macapá</strong> é a capital do estado do Amapá<br> 
+            <b>Área territorial:</b> 6.407km² <br> 
+            <b>População:</b> 493.634 habitantes <br> 
+            <b>Curiosidade:</b> a única que não faz ligação com outras capitais por meio de rodovias
+        </p>
+    </section>
 
-Salvador capital do estado da Bahia Área territorial: 693,8 km² População: 2,7 milhões de habitantes  Curiosidade: foi a primeira do  BRASIL -->
+    <section class="card">
+        <h2 class="card-titulo">Manaus</h2>
+        <img src="/imgs/manaus.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>Manaus</strong> é a capital do estado do Amazonas <br> 
+            <b>Área territorial:</b> 11.401km² <br> 
+            <b>População:</b> 2 milhões de habitantes <br> 
+            <b>Curiosidade:</b> Situada no centro da floresta amazônica
+        </p>
+    </section>
 
-<p class="card-text"> <strong>São Paulo</strong> capital do estado de São Paulo <br> 
-    <b>Área territorial:</b> 1.521 km² <br> <b>População:</b> 12 milhões de habitantes <br> 
-    <b>Curiosidade:</b> maior cidade do país é considerada uma metrópole mundial brasileira.
-</p>
-    
+    <section class="card">
+        <h2 class="card-titulo">Salvador</h2>
+        <img src="/imgs/salvador.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>Salvador</strong> é a capital do estado da Bahia<br>
+            <b>Área territorial:</b> 693,8 km²<br>
+            <b>População:</b> 2,7 milhões de habitantes<br>
+            <b>Curiosidade:</b> Foi a primeira do capital BRASIL
+        </p>
+    </section>
+
+    <section class="card">
+        <h2 class="card-titulo">São Paulo</h2>
+        <img src="/imgs/sao_paulo.jpeg" class="card-imagem">
+        <p class="card-texto">
+            <strong>São Paulo</strong> capital do estado de São Paulo <br>
+            <b>Área territorial:</b> 1.521 km² <br>
+            <b>População:</b> 12 milhões de habitantes <br> 
+            <b>Curiosidade:</b> maior cidade do país é considerada uma metrópole mundial brasileira.
+        </p>
+    </section>
+
 </body>
 </html>
