Ajustando style dos cards

--- a/módulo_I/Aula 05/pratica.html
+++ b/módulo_I/Aula 05/pratica.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-    <h1>Estados e algumas capitais</h1>
+    <h1 class="titulo">Estados e algumas capitais</h1>
 
     <section class="card">
         <h2 class="card-titulo">Rio Branco</h2>
-        <img src="/imgs/rio_branco.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/rio_branco.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>Rio Branco</strong> é a capital do estado do Acre (AC) <br> 
             <b>Área territorial:</b> 8.835km² <br> 
@@ -24,7 +24,7 @@
 
     <section class="card">
         <h2 class="card-titulo">Maceió</h2>
-        <img src="/imgs/maceio.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/maceio.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>Maceió</strong> é a capital do estado de Alagoas<br> 
             <b>Área territorial:</b> 509,6km² <br> 
@@ -35,7 +35,7 @@
 
     <section class="card">
         <h2 class="card-titulo">Macapá</h2>
-        <img src="/imgs/macapa.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/macapa.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>Macapá</strong> é a capital do estado do Amapá<br> 
             <b>Área territorial:</b> 6.407km² <br> 
@@ -46,7 +46,7 @@
 
     <section class="card">
         <h2 class="card-titulo">Manaus</h2>
-        <img src="/imgs/manaus.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/manaus.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>Manaus</strong> é a capital do estado do Amazonas <br> 
             <b>Área territorial:</b> 11.401km² <br> 
@@ -57,7 +57,7 @@
 
     <section class="card">
         <h2 class="card-titulo">Salvador</h2>
-        <img src="/imgs/salvador.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/salvador.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>Salvador</strong> é a capital do estado da Bahia<br>
             <b>Área territorial:</b> 693,8 km²<br>
@@ -68,7 +68,7 @@
 
     <section class="card">
         <h2 class="card-titulo">São Paulo</h2>
-        <img src="/imgs/sao_paulo.jpeg" class="card-imagem">
+        <img src="/Aula 05/imgs/sao_paulo.jpeg" class="card-imagem">
         <p class="card-texto">
             <strong>São Paulo</strong> capital do estado de São Paulo <br>
             <b>Área territorial:</b> 1.521 km² <br>
