--- a/módulo_I/Projeto Final/projeto_portifolio.html
+++ b/módulo_I/Projeto Final/projeto_portifolio.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>Formação</li>
-                <li>Portifólio</li>
+                <li>Portfólio</li>
                 <li>Contato</li>
             </ul>
         </nav>
@@ -23,9 +23,9 @@
     <main>
         <section class="sobre">
             <div class="conteiner-sobre">
-                <!-- <img src="./img/luisa.jpg" alt="Foto de Luísa"> -->
-                <h1>Luísa Cristina Ferreira</h1>
-                <h2>FrontEnd Developer Student</h2>
+                <img src="./img/luisa.jpg" alt="Foto de Luísa">
+                <h1 style="color: #4608AE;">Luísa Cristina Ferreira</h1>
+                <h3 style="color: #C2BCE8;">Frontend Developer Student</h3>
                 <p>Mulher negra, Estudante de Gestão Financeira, Bacharelanda em Ciência e Tecnologia. 
                     Sou apaixonada por aprender e tento pôr isso em prática desde o início de minha carreira. 
                     Já fui bolsista de pesquisa na Universidade; fora dela, fui voluntária na AIESEC e hoje aprendo 
@@ -36,24 +36,27 @@
         </section>
 
         <section class="formacao">
-            <h3>Formação</h3>
+            <div class="conteiner-formacao">
+                <h2>Formação</h2>
 
-            <h4>Ciclo formativo Básico</h4>
-            <p>Pretalab</p>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Voluptatibus, nam veniam aliquam dignissimos fuga maiores vero sint tenetur nostrum tempore 
-                animi qui minus quam libero ipsa minima repellendus aperiam reprehenderit. </p>
+                <div class="texto">
+                    <h4>Ciclo formativo Básico</h4>
+                    <p>Pretalab</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Voluptatibus, nam veniam aliquam dignissimos fuga maiores vero sint tenetur nostrum tempore 
+                        animi qui minus quam libero ipsa minima repellendus aperiam reprehenderit. </p>
 
-            <h4>Bacharelado Interdisciplinar em Ciência e Tecnologia</h4>
-            <p>UFBA</p>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                Voluptatibus, nam veniam aliquam dignissimos fuga maiores vero sint tenetur nostrum tempore 
-                animi qui minus quam libero ipsa minima repellendus aperiam reprehenderit. </p>
-
+                    <h4>Bacharelado Interdisciplinar em Ciência e Tecnologia</h4>
+                    <p>UFBA</p>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        Voluptatibus, nam veniam aliquam dignissimos fuga maiores vero sint tenetur nostrum tempore 
+                        animi qui minus quam libero ipsa minima repellendus aperiam reprehenderit. </p>
+                </div>
+            </div>
         </section>
 
         <section class="portfotio">
-            <h3>Meus Projetos</h3> 
+            <h2>Meus Projetos</h2> 
 
             <h4>Decoficador de Texto</h4> 
             <p>Projeto em JavaScript</p> 
