Adicionando arquivo da aula 08_09

--- a/módulo_I/Projeto Final/index.html
+++ b/módulo_I/Projeto Final/index.html
@@ -7,7 +7,7 @@
     <title>Portfólio de Luísa Cristina</title>
     <!-- <link rel="stylesheet" href="/reset.css"> -->
     
-    <link rel="stylesheet" href="/Projeto Final/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&display=swap" rel="stylesheet">
@@ -36,8 +36,8 @@
     <main>
         <section id="sobre">
             <div class="conteiner-sobre">
-                <img src="./img/octocat.png" alt="Foto de Luísa">
-                <h1 style="color: #4608AE;">Luísa Cristina Ferreira</h1>
+                <img src="./img/luisa2.jpeg" alt="Foto de Luísa">
+                <h1 style="color: #4608AE; font-size: xx-large;">Luísa Cristina Ferreira</h1>
                 <h3 style="color: #988dde;">Frontend Developer Student</h3>
                 <p>Mulher negra, Estudante de Gestão Financeira, Bacharelanda em Ciência e Tecnologia. 
                     Sou apaixonada por aprender e tento pôr isso em prática desde o início de minha carreira. 
@@ -104,7 +104,7 @@
                     <li>
                         <h4>Outro projeto</h4> 
                         <p>Linguagem de programação</p> 
-                        <a href="">Link para o projeto</a> 
+                        <a href="">Link para o projeto</a><br>
                         <a href="">Link para o esboço no Figma</a> 
                         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                         Voluptatibus, nam veniam aliquam dignissimos fuga maiores vero sint tenetur nostrum tempore 
