--- a/módulo_II_JS/to-do list/index.html
+++ b/módulo_II_JS/to-do list/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>.: Lista de Tarefas de Luísa :.</h1>
+    <input type="text" id="nome-tarefa">
     <button onclick="adicionarTarefa()">Adicionar tarefa</button>
     <div id="lista-tarefas"></div>
 
 </body>
-<script src="/to-do list/index.js"></script>
+<script src="./index.js"></script>
 </html>
 
