aula 22/out - localStorage todo-list

--- a/módulo_II_JS/to-do list/index.html
+++ b/módulo_II_JS/to-do list/index.html
@@ -10,7 +10,7 @@
     <h1>.: Lista de Tarefas de Luísa :.</h1>
     <input type="text" id="nome-tarefa">
     <button onclick="adicionarTarefa()">Adicionar tarefa</button>
-    <div id="lista-tarefas"></div>
+    <div id="tasksList"></div>
 
 </body>
 <script src="./index.js"></script>
